[MBT] Maven: fix javac options for multi-execution compiler configs (#8428)
<!-- This is an auto-generated comment: release notes by coderabbit.ai
-->

## Summary by CodeRabbit

* **Tests**
* Added comprehensive test coverage for Maven compiler execution
selection and prioritization, including scenarios with default
executions and fallback behavior verification.

* **Refactor**  
* Enhanced Maven compiler configuration extraction logic to improve
handling and selection of multiple plugin executions.
* Added logging support for compiler configuration processing
operations.
* Improved configuration merging behavior for goal-specific execution
matching.

<!-- review_stack_entry_start -->

[![Review Change
Stack](https://storage.googleapis.com/coderabbit_public_assets/review-stack-in-coderabbit-ui.svg)](https://app.coderabbit.ai/change-stack/scalameta/metals/pull/8428?utm_source=github_walkthrough&utm_medium=github&utm_campaign=change_stack)

<!-- review_stack_entry_end -->

<!-- end of auto-generated comment: release notes by coderabbit.ai -->